[tool.poetry]
name = "pytune_qdrant"
version = "0.1.0"
description = "Qdrant integration for PyTune and EigenAgentUX (semantic memory)"
authors = ["Gabriel <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
packages = [{ include = "pytune_qdrant" }]

[tool.poetry.dependencies]
python = "^3.12.3"
qdrant-client = "^1.6.0"

# -- PROD --
# simple_logger = { git = "https://github.com/gdefombelle/simple_logger.git" }
# pytune_configuration = { git = "https://github.com/gdefombelle/pytune_configuration.git"}


# -- DEV --
simple_logger = { path = "../../packages/simple_logger" }
pytune_configuration = { path = "../../packages/pytune_configuration"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
